finished wiring new world capture code into the export system